--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.5.12",
     "node-fs": "^0.1.7",
     "nuxt": "^2.0.0",
+    "vue-cookie": "^1.1.4",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
