--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "dotenv-safe": "^6.1.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
+    "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.7",
     "node-fs": "^0.1.7",
     "nuxt": "^2.0.0",
+    "popper.js": "^1.15.0",
+    "summernote": "^0.8.12",
     "vue-cookie": "^1.1.4",
     "vuex": "^3.1.1"
   },
