--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "mongoose": "^5.6.7",
     "node-fs": "^0.1.7",
     "nuxt": "^2.0.0",
-    "popper.js": "^1.15.0",
-    "summernote": "^0.8.12",
+    "sweetalert2": "^8.15.1",
     "vue-cookie": "^1.1.4",
+    "vue-trumbowyg": "^3.4.2",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
