--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
-    "@nuxtjs/vuetify": "0.5.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "consign": "^0.1.6",
@@ -33,11 +32,13 @@
     "sweetalert2": "^8.15.1",
     "vue-cookie": "^1.1.4",
     "vue-trumbowyg": "^3.4.2",
+    "vuetify-toast-snackbar": "^0.5.0",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
     "@nuxtjs/eslint-module": "^0.0.1",
+    "@nuxtjs/vuetify": "^1.6.1",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.15.1",
     "eslint-config-prettier": "^4.1.0",
