--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.7",
+    "multer": "^1.4.2",
     "node-fs": "^0.1.7",
     "nuxt": "^2.0.0",
     "sweetalert2": "^8.15.1",
