--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "animate.css": "^3.7.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "code-prettify": "^0.1.0",
     "consign": "^0.1.6",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
@@ -30,7 +31,7 @@
     "mongoose": "^5.6.7",
     "multer": "^1.4.2",
     "node-fs": "^0.1.7",
-    "nuxt": "^2.0.0",
+    "nuxt": "^2.11.0",
     "sweetalert2": "^8.15.1",
     "vue-cookie": "^1.1.4",
     "vue-trumbowyg": "^3.4.2",
