--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.7",
+    "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "node-fs": "^0.1.7",
     "nuxt": "^2.11.0",
