--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "vue-cookie": "^1.1.4",
     "vue-trumbowyg": "^3.4.2",
     "vuetify-toast-snackbar": "^0.5.0",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
