--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nuxt": "^2.11.0",
     "sweetalert2": "^8.15.1",
     "vue-cookie": "^1.1.4",
+    "vue-reactive-cookie": "^1.0.4",
     "vue-trumbowyg": "^3.4.2",
     "vuetify-toast-snackbar": "^0.5.0",
     "vuex": "^3.1.1",
